--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="https://symptoms-82842-default-rtdb.asia-southeast1.firebasedatabase.app"
+FIREBASE_DATABASE_URL=https://symptoms-82842-default-rtdb.asia-southeast1.firebasedatabase.app
