--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-FIREBASE_DATABASE_URL=https://symptoms-82842-default-rtdb.asia-southeast1.firebasedatabase.app
+DATABASE_URL="https://symptoms-82842-default-rtdb.asia-southeast1.firebasedatabase.app"
+KEY_FILENAME="key.json"
+PROJECT_ID="capstone-pawpal88"
+BUCKET_NAME="pawpal"
