--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DATABASE_URL="https://symptoms-82842-default-rtdb.asia-southeast1.firebasedatabase.app"
 KEY_FILENAME="key.json"
+FIREBASE_API_KEY="AIzaSyAPNSSma03HNFSjey_FeSLep7bFeB-ci4g"
 PROJECT_ID="capstone-pawpal88"
 BUCKET_NAME="pawpal"
