--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capstone",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server/server.js",
   "scripts": {
     "start": "node src/server/server.js"
   },
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "firebase-admin": "^12.1.1",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
