--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL="https://cat-breed-a70db-default-rtdb.asia-southeast1.firebasedatabase.app"
-KEY_FILENAME="/Users/ADMIN/Documents/GitHub/Project-Capstone-Bangkit-Academy-2024/key.json"
+KEY_FILENAME="C:\Users\ADMIN\Documents\GitHub\Project-Capstone-Bangkit-Academy-2024\src\server\key.json"
 FIREBASE_API_KEY="AIzaSyAPNSSma03HNFSjey_FeSLep7bFeB-ci4g"
 PROJECT_ID="capstone-pawpal88"
 BUCKET_NAME="pawpal"
