--- a/main_api/package.json
+++ b/main_api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server/server.js",
   "scripts": {
-    "start": "node src/server/server.js"
+    "start": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
