--- a/ml_api/requirements.txt
+++ b/ml_api/requirements.txt
@@ -1,10 +1,4 @@
-pandas==2.0.3
-numpy==1.25.2
-matplotlib==3.7.1
-Pillow==9.4.0
-scikit-learn==1.2.2
-scipy==1.11.4
-imageio==2.31.6
-tensorflow==2.15.0
+numpy
 flask
 requests
+Pillow
